2013-02-16  Corinna Vinschen  <corinna@vinschen.de>

	Throughout, tweak pointer expressions to use unambiguous cast
	on all supported platforms.
	* sections.cc (Exports::dump): Constify argument to avoid compiler
	warning.
	(Imports::dump): Ditto.
	* sections.h (SectionBase::getAdjust): Change type to ptrdiff_t.
	(SectionBase::adjust): Ditto.
	(Exports::dump): Constify argument in declaration to avoid compiler
	warning.
	(Imports::dump): Ditto.

2011-01-16  Jason Tishler  <jason@tishler.net>

	Prepare for release 4.4.0.
	* Makefile.in (LIB_VERSION): Update to version 0.11.

2013-01-16  Corinna Vinschen  <corinna@vinschen.de>

	* objectfile.h (LinkedObjectFile::performRelocation): Change type of
	parameter to int64_t.
	* rebaseimage.cc (ReBaseImage64): Change type of local variable
	difference to int64_t.
	* sections.cc (Relocations::check): Fix formatting.
	(Relocations::relocate): Take difference parameter as int64_t.  Call
	cursec->debugprint rather than cursec->print and drop FIXME comment.
	Handle Windows relocation info types IMAGE_REL_BASED_ABSOLUTE,
	IMAGE_REL_BASED_HIGHLOW and IMAGE_REL_BASED_DIR64.  Print error
	output if another relocation type is found.  Fix formatting.
	* sections.h (Relocations::relocate): Change type of parameter to
	int64_t.

2012-04-30  Corinna Vinschen  <corinna@vinschen.de>

	* imagehelper.h (ReBaseDropDynamicbaseFlag): Declare.
	* rebaseimage.cc: Include windows.h.  Handle old w32api releases.
	(ReBaseDropDynamicbaseFlag): Define.
	(ReBaseImage64): Drop IMAGE_DLLCHARACTERISTICS_DYNAMIC_BASE flag
	in DllCharacteristics if successfully rebased and

2012-03-19  Corinna Vinschen  <corinna@vinschen.de>

	* imagehelper.h (ReBaseChangeFileTime): Declare.
	* objectfile.h (ObjectFile::setFileTime): New method.
	* rebaseimage.cc (ReBaseChangeFileTime): Define.
	(ReBaseImage64): Call ObjectFile::setFileTime if successfully rebased
	and ReBaseChangeFileTime is true.

2011-10-22  Jason Tishler  <jason@tishler.net>

	Prepare for release 4.0.0.